# baselinepy

./: .gitignore  README.md  pyproject.toml  test.py
src/baselinepy/: __init__.py  font.py  logo.py  mpl.py  theme.py
src/baselinepy/resources/: color.json  style.json
