[project]
name = "baselinepy"
version = "0.1.0"
description = "python theme and style for the baseline"
authors = [
    { name = "Lukas Nesheim" }
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
]

[tool.poetry]
packages = [
    { include = "baselinepy", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
