[project]
name = "baselinepy"
version = "0.1.0"
description = "python theme and style for the baseline"
authors = [
    { name = "Lukas Nesheim" }
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "polars (>=1.31.0,<2.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)"
]

[tool.poetry]
packages = [{ include = "baselinepy", from = "src" }]
include = ["src/baselinepy/resources/**"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"